# flowleap-cli

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/adr/: 0001-agent-mediated-onboarding-contract.md
docs/plans/: 2026-03-10-oauth-pkce-fix.md
docs/prd/: 0001-cli-remediation-and-multi-harness.md
npm/: .gitignore  download.mjs  install.mjs  package.json
skills/flowleap/: SKILL.md
skills/flowleap-academic/: SKILL.md
skills/flowleap-auth/: SKILL.md
skills/flowleap-chat/: SKILL.md
skills/flowleap-citation/: SKILL.md
skills/flowleap-keys/: SKILL.md
skills/flowleap-legal/: SKILL.md
skills/flowleap-models/: SKILL.md
skills/flowleap-npl/: SKILL.md
skills/flowleap-ocr/: SKILL.md
skills/flowleap-ops/: SKILL.md
skills/flowleap-patent/: SKILL.md
skills/flowleap-patstat/: SKILL.md
skills/flowleap-shared/: SKILL.md
skills/flowleap-tools/: SKILL.md
skills/flowleap-uspto/: SKILL.md
skills/flowleap/agents/: openai.yaml
skills/persona-ip-analyst/: SKILL.md
skills/persona-patent-attorney/: SKILL.md
skills/persona-researcher/: SKILL.md
skills/persona-startup-founder/: SKILL.md
skills/recipe-academic-literature-review/: SKILL.md
skills/recipe-audit-report/: SKILL.md
skills/recipe-claim-analysis/: SKILL.md
skills/recipe-claim-drafting/: SKILL.md
skills/recipe-custom-dashboard/: SKILL.md
skills/recipe-custom-dashboard/references/: smoke.mjs  stub-flowleap.mjs  template-citation-impact.mjs  template-filing-trends.mjs  template-landscape-whitespace.mjs  template-portfolio.mjs
skills/recipe-custom-dashboard/references/fixtures/: analytics-cpc-a61b.json  analytics-cpc-g06f.json  analytics-cpc-g06n.json  analytics-cpc-g16h.json  analytics-cpc-h04l.json  analytics-overview.json  citation-forward.json  doctor.json  (+3 more)
skills/recipe-freedom-to-operate/: SKILL.md
skills/recipe-infringement-charting/: SKILL.md
skills/recipe-invalidity-analysis/: SKILL.md
skills/recipe-invention-disclosure/: SKILL.md
skills/recipe-maintenance-fees/: SKILL.md
skills/recipe-office-action-response/: SKILL.md
skills/recipe-patent-landscape/: SKILL.md
skills/recipe-patent-to-report/: SKILL.md
skills/recipe-prior-art-search/: SKILL.md
src/: client.rs  config.rs  lib.rs  main.rs  output.rs  update.rs  url_guard.rs
src/commands/: academic.rs  analytics.rs  analyze_claim.rs  api.rs  auth.rs  chat.rs  citation.rs  config_cmd.rs  doctor.rs  facade.rs  health.rs  keys.rs  legal.rs  mcp.rs  mod.rs  models.rs  npl.rs  ocr.rs  ops.rs  patent.rs  patstat.rs  query_privacy.rs  skills.rs  tools.rs  upgrade.rs  uspto.rs
src/output/: formatter.rs
tests/: auth_login_test.rs  cli_test.rs  config_test.rs  dashboard_smoke_test.rs  doctor_test.rs  exit_codes_test.rs  facade_test.rs  http_client_test.rs  mcp_test.rs  output_test.rs  patstat_test.rs  setup_wizard_test.rs  skills_cli_test.rs  upgrade_test.rs  url_guard_test.rs
tests/golden/: agents-rules-block.md  cursor-flowleap.mdc
tests/support/: mod.rs
